<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/whiteButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_fr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/white"
                    android:text="@string/fr_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="fr"/>

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_pl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/white"
                    android:text="@string/pl_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="pl"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/redButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_dw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/red"
                    android:text="@string/dw_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="dw"/>

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_ob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/red"
                    android:text="@string/ob_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="ob"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/orangeButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_md"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/orange"
                    android:text="@string/md_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="md"/>

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_zi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/orange"
                    android:text="@string/zi_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="zi"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/greenButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_bj"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/green"
                    android:text="@string/bj_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="bj"/>

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_pa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/green"
                    android:text="@string/pa_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="pa"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/blueButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_vl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/blue"
                    android:text="@string/vl_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="vl"/>

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_mz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/blue"
                    android:text="@string/mz_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="mz"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/purpleButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_jl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/purple"
                    android:text="@string/jl_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="jl"/>

                <com.kevinscannell.apps.traitorstoolkit.TTImageButton
                    android:id="@+id/btn_hg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/purple"
                    android:text="@string/hg_name"
                    android:layout_margin="2dp"
                    android:onClick="showCharacter"
                    custom:character_code="hg"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>